[metadata]
name = pyg-timeseries
version = 0.0.3
author = Yoav Git
author_email = yoav.git@gmail.com
description = Utilities for fast timeseries analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gityoav/pyg-timeseries
project_urls =
    Bug Tracker = https://github.com/gityoav/pyg-timeseries/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = pyg-base; numba; xarray; bottleneck

[options.packages.find]
where = src