[metadata]
name = pyg-timeseries
version = 0.0.17
author = Yoav Git
author_email = yoav.git@gmail.com
description = Utilities for fast timeseries analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gityoav/pyg-timeseries
project_urls =
    Bug Tracker = https://github.com/gityoav/pyg-timeseries/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = pyg-base; numba; bottleneck

[options.packages.find]
where = src